<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Signup"
    android:background="@drawable/default_background"
    android:weightSum="1">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:layout_width="146dp"
        android:layout_height="113dp"
        android:id="@+id/imageView"
        android:src="@drawable/temp"
        android:maxWidth="42dp"
        android:maxHeight="42dp"
        android:scaleType="fitCenter"
        android:layout_weight="0.28" />


    <!--<TextView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:id="@+id/editText"-->
    <!--android:layout_gravity="center_horizontal"-->
    <!--android:text="Take Me There"-->
    <!--android:gravity="center"-->
    <!--android:textSize="50px"-->
    <!--android:textStyle="bold" />-->

    <AutoCompleteTextView
        android:layout_marginTop="20dp"
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_name"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:backgroundTint="#ffffff"
        android:textColorHint="#ffffff"
        android:singleLine="true" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email_signup"
        android:inputType="textEmailAddress"
        android:backgroundTint="#ffffff"
        android:textColorHint="#ffffff"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:backgroundTint="#ffffff"
        android:textColorHint="#ffffff"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/repassword"
        android:backgroundTint="#ffffff"
        android:textColorHint="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_repassword"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gender"
        android:entries="@array/genderTypes"
        android:backgroundTint="#ffffff"
        android:textColorHint="#ffffff"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/email_sign_up_button"
        style="?android:textAppearanceSmall"
        android:layout_width="385dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:text="@string/action_sign_up"
        android:textStyle="bold"
        android:textColor="#000"
        android:background="#f3d005"
        android:clickable="true"
        android:onClick="signUpUsers"/>

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Already have an account? Sign In"
        android:id="@+id/forgetPassword"
        android:textSize="16sp"
        android:gravity="start"
        android:textColor="#ffffff"
        android:onClick="moveLogin"/>

</LinearLayout>
