<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:background="#ffffff"
    android:weightSum="1">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:layout_width="146dp"
        android:layout_height="113dp"
        android:id="@+id/imageView"
        android:src="@drawable/temp"
        android:maxWidth="42dp"
        android:maxHeight="42dp"
        android:scaleType="fitCenter"
        android:layout_weight="0.28" />


    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/editText"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:text="Take Me There"-->
        <!--android:gravity="center"-->
        <!--android:textSize="50px"-->
        <!--android:textStyle="bold" />-->

    <AutoCompleteTextView
        android:layout_marginTop="20dp"
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/email_sign_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="385dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:text="@string/action_sign_in"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="#000"/>

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="- Or -"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/facebook_sign_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="355dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:text="SIGN IN WITH FACEBOOK"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="#3b5998"/>

    <Button
        android:id="@+id/gmail_sign_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="355dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:text="SIGN IN WITH GOOGLE+"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="#d34836"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Forgot Password?"
            android:id="@+id/forgetPassword"
            android:textSize="16sp"
            android:gravity="start"
            android:linksClickable="true"/>

        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="New here? Sign Up"
            android:textSize="16sp"
            android:id="@+id/signUp"
            android:gravity="end"
            android:textAlignment="viewEnd"
            android:linksClickable="true"
            android:onClick="addListenerOnText"/>

    </LinearLayout>
</LinearLayout>
